kikker/deploys/istio/kikker/kikker-frontend-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kikkerfrontend
spec:
  host: kikkerfrontend
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
#RANDOM, LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v001
    labels:
      version: v001
