kikker/deploys/istio/kikker/serviceentry-cendris.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cendris-srventry
spec:
  hosts:
  - www.cendris.nl
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
