kikker/deploys/istio/kikker/serviceentry-edsn-mock-sandbox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: edsn-mock-sandbox
spec:
  hosts:
  - edsnmockservice.getsandbox.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
