kikker/deploys/istio/kikker/serviceentry-edsn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: edsn
spec:
  hosts:
  - portaal-opt.edsn.nl
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: edsn
spec:
  hosts:
  - portaal-opt.edsn.nl
  tls:
  - match:
    - port: 443
      sni_hosts:
      - portaal-opt.edsn.nl
    route:
    - destination:
        host: portaal-opt.edsn.nl
        port:
          number: 443
      weight: 100
