kikker/deploys/istio/kikker/serviceentry-exe.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: exe-mocksystem
spec:
  hosts:
  - kikker-exe-mocksys.getsandbox.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
