kikker/deploys/istio/kikker/serviceentry-sandbox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sandbox-mocksystem
spec:
  hosts:
  - edsn-searchmeteringpoints.getsandbox.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
