kikker/deploys/istio/kikker/virtualservice-auth.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikkerauth
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: kikkerauth        
        port:
          number: 8080
