kikker/deploys/istio/kikker/virtualservice-cendris.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-cendris-rest
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /Cendris
    route:
    - destination:
        host: cendrisrestadapter
        port:
          number: 80
