kikker/deploys/istio/kikker/virtualservice-core.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-core
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /core/
    route:
    - destination:
        host: kikkercore
        port:
          number: 80
