kikker/deploys/istio/kikker/virtualservice-crm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-crmapi
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /crm
    route:
    - destination:
        host: kikker-crmapi        
        port:
          number: 80
