kikker/deploys/istio/kikker/virtualservice-edsn-proxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-edsn-callproxy
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /api/meteringpoints
    route:
    - destination:
        host: edsn-client-usage-sample
        port:
          number: 80
