kikker/deploys/istio/kikker/virtualservice-edsn-real-restapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-edsnrestapi
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /realedsn
    route:
    - destination:
        host: edsnrestapiscaled
        port:
          number: 80
