kikker/deploys/istio/kikker/virtualservice-edsnmock.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-edsnmock
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        exact: /edsnmock
    route:
    - destination:
        host: edsnmockapi
        port:
          number: 80
