kikker/deploys/istio/kikker/virtualservice-edsnrestadapter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-edsnportaal-rest
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /EdsnPortaal
    route:
    - destination:
        host: edsnrestadapter
        port:
          number: 80
