kikker/deploys/istio/kikker/virtualservice-edsnrestapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-edsnrestapi
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /edsnrest/
    route:
    - destination:
        host: edsnrestapiscaled
        port:
          number: 80
