kikker/deploys/istio/kikker/virtualservice-healthcheck.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: healthcheck
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        exact: /health
    route:
    - destination:
        host: healthcheck        
        port:
          number: 80
