kikker/deploys/istio/kikker/virtualservice-kvk.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikkersupplierskvkapi
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        exact: /KvK
    route:
    - destination:
        host: kikkersupplierskvkapi        
        port:
          number: 80
