kikker/deploys/istio/kikker/virtualservice-kvkrestapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-kvkrestapi
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /kvk
    route:
    - destination:
        host: kvkrestapi21
        port:
          number: 80
