kikker/deploys/istio/kikker/virtualservice-rate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikker-rate
spec:
  hosts:
  - "*"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        prefix: /rate/
    route:
    - destination:
        host: kikkerrate
        port:
          number: 80
