kikker/deploys/istio/kikker/virtualservice-scheduletask.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kikkerscheduledtasks
spec:
  hosts:
  - "kikker.istio.infodation.vn"
  gateways:
  - kikker-gateway-vncluster
  http:
  - match:
    - uri:
        exact: /hangfire
    route:
    - destination:
        host: kikkerscheduledtasks        
        port:
          number: 80
